<resources>
    <string name="app_name">LittleJoy</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="api_key">AIzaSyCXZRj-14660W6i_OpvDy-iGvYhPjOOkqM</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="featured_category">Featured Category</string>
    <string name="see_all">See all</string>
    <string-array name="droneType">
        <item>Fixed</item>
        <item>Quadcopter</item>
        <item>Hexacopter</item>
    </string-array>
    <string-array name="opType">
        <item>I will be operating this drone</item>
        <item>My friend will be operating this drone</item>
        <item>Let TSAW suggest an operator for this asset</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="customerType">
        <item>Individual</item>
        <item>Enterprise</item>
    </string-array>
    <string-array name="job_location">
        <item>Home</item>
        <item>Current</item>
    </string-array>
    <string-array name="tshirttype">
        <item>Small(S)</item>
        <item>Medium(M)</item>
        <item>Large(L)</item>
        <item>Extra Large(XL)</item>
        <item>Extra Extra Large(XXL)</item>
    </string-array>
    <string-array name="time_minute_class">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string-array name="hour_class">
        <item>00:00 AM</item>
        <item>01:00 AM</item>
        <item>02:00 AM</item>
        <item>03:00 AM</item>
        <item>04:00 AM</item>
        <item>05:00 AM</item>
        <item>06:00 AM</item>
        <item>07:00 AM</item>
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>13:00 PM</item>
        <item>14:00 PM</item>
        <item>15:00 PM</item>
        <item>16:00 PM</item>
        <item>17:00 PM</item>
        <item>18:00 PM</item>
        <item>19:00 PM</item>
        <item>20:00 PM</item>
        <item>21:00 PM</item>
        <item>22:00 PM</item>
        <item>23:00 PM</item>
    </string-array>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_product_description">ProductDescriptionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_online_shopping_cart">OnlineShoppingCartActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="all_products">All Products</string>
    <string name="how_does_it_work">How Does It Work</string>
    <string name="join_refer_earn_program"><![CDATA[Join Refer & Earn Program]]></string>
    <string name="share_your_referral">Share Your Referral</string>
    <string name="friend_signup">Friend Signup</string>
    <string name="cashback_credited_your_wallet">Cashback Credited Your Wallet</string>
    <string name="share_your_referral_code_with_your_friends_colleagues"><![CDATA[Share your Referral code with Your Friends & Colleagues.]]></string>
    <string name="if_your_friend_signup_with_your_referral_code_at_little_joy_he_she_will_earn_rs_250_joining_bonus_when_your_friend_complete_his_her_booking_order_they_will_also_get_additional_5_10_cashback_you_will_also_earn_5_on_total_order_value">If your friend signup with your Referral code at Little Joy. He/She will <b>Earn Rs. 250/-</b> Joining Bonus. When your Friend complete his/her booking/order. They will also <b>get additional 5-10%/-</b> CashBack &amp; you will also <b>Earn 5%</b> on Total Order Value.</string>
    <string name="all_amount_will_be_credited_in_your_little_joy_wallet_can_be_redeemed_through_shopping_booking_services_on_little_joy_app">All Amount will be credited in your <b>Little Joy Wallet</b> &amp; Can be Redeemed Through Shopping/Booking Services on <b>Little Joy App.</b></string>
</resources>