<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.littlejoyindia.littlejoyindia.ui.dashboard.referAndEarn.ReferAndEarnViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.referAndEarn.ReferAndEarnFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/how_does_it_work"
            style="@style/TextStyle.Title"
            android:textColor="@color/orange_theme_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTitle"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/join_refer_earn_program"
            style="@style/TextStyle.Title.Sub"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCircle1"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
            android:src="@drawable/circle_active"
            app:tint="@color/orange_theme_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black_effective"
            android:alpha="0.8"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/ivCircle1"
            app:layout_constraintBottom_toTopOf="@id/ivCircle2"
            app:layout_constraintStart_toStartOf="@id/ivCircle1"
            app:layout_constraintEnd_toEndOf="@id/ivCircle1"
            android:layout_width="2dp"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle1"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ivCircle1"
            app:layout_constraintBottom_toBottomOf="@id/ivCircle1"
            app:layout_constraintTop_toTopOf="@id/ivCircle1"
            android:gravity="center_vertical"
            android:textStyle="bold"
            style="@style/TextStyle.Title"
            android:text="@string/share_your_referral"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/refer_icon_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTitle1"
            android:textColor="@color/colorNotVisit"
            style="@style/TextStyle.Title.Sub"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/tvTitle1"
            app:layout_constraintTop_toBottomOf="@id/tvTitle1"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:text="@string/share_your_referral_code_with_your_friends_colleagues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCircle2"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitle1"
            android:src="@drawable/circle_active"
            app:tint="@color/orange_theme_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black_effective"
            android:alpha="0.8"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/ivCircle2"
            app:layout_constraintBottom_toTopOf="@id/ivCircle3"
            app:layout_constraintStart_toStartOf="@id/ivCircle2"
            app:layout_constraintEnd_toEndOf="@id/ivCircle2"
            android:layout_width="2dp"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle2"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ivCircle2"
            app:layout_constraintBottom_toBottomOf="@id/ivCircle2"
            app:layout_constraintTop_toTopOf="@id/ivCircle2"
            android:gravity="center_vertical"
            android:textStyle="bold"
            style="@style/TextStyle.Title"
            android:text="@string/friend_signup"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/refer_icon_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTitle2"
            android:textColor="@color/colorNotVisit"
            style="@style/TextStyle.Title.Sub"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/tvTitle2"
            app:layout_constraintTop_toBottomOf="@id/tvTitle2"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:text="@string/if_your_friend_signup_with_your_referral_code_at_little_joy_he_she_will_earn_rs_250_joining_bonus_when_your_friend_complete_his_her_booking_order_they_will_also_get_additional_5_10_cashback_you_will_also_earn_5_on_total_order_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCircle3"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitle2"
            android:src="@drawable/circle_active"
            app:tint="@color/orange_theme_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle3"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/ivCircle3"
            app:layout_constraintBottom_toBottomOf="@id/ivCircle3"
            app:layout_constraintTop_toTopOf="@id/ivCircle3"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="16sp"
            style="@style/TextStyle.Title"
            android:text="@string/cashback_credited_your_wallet"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/refer_icon_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTitle3"
            android:textColor="@color/colorNotVisit"
            style="@style/TextStyle.Title.Sub"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/tvTitle3"
            app:layout_constraintTop_toBottomOf="@id/tvTitle3"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:text="@string/all_amount_will_be_credited_in_your_little_joy_wallet_can_be_redeemed_through_shopping_booking_services_on_little_joy_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReferCode"
            style="@style/TextStyle.Title.Sub"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShareNow"
            android:onClick="@{()->viewModel.onShare()}"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="40dp"
            android:background="@drawable/drawable_button_bg"
            android:textColor="@color/white"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReferCode"
            style="@style/TextStyle.Title.Sub"
            android:drawableStart="@drawable/refer_share_icon"
            android:text="Refer Friend Now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>