<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.onlineShopping.OnlineShoppingFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.littlejoyindia.littlejoyindia.ui.dashboard.onlineShopping.OnlineShoppingViewModel" />

    </data>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <ss.com.bannerslider.Slider
            app:slider_interval="5000"
            app:slider_loopSlides="true"
            app:slider_defaultBanner="1"
            app:slider_animateIndicators="true"
            app:slider_indicatorSize="12dp"
            android:id="@+id/topSlider"
            android:layout_width="match_parent"
            android:layout_height="200dp" />


        <me.relex.circleindicator.CircleIndicator
            android:visibility="gone"
            android:id="@+id/indicatorTopSlider"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>


        <androidx.core.widget.NestedScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_marginBottom="12dp"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle.ExtraBold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/featured_category"
                        android:textColor="@color/textColorDark"
                        android:textSize="20sp" />

                    <TextView
                        style="@style/TextStyle.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/see_all"
                        android:textColor="@color/quantum_grey800"
                        android:textSize="20sp" />

                </LinearLayout>

                <GridView
                    android:id="@+id/gridViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:horizontalSpacing="10dp"
                    android:nestedScrollingEnabled="true"
                    android:numColumns="3"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:gravity="center"
                    android:verticalSpacing="15dp"
                    tools:listitem="@layout/shopping_category_item" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle.ExtraBold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/all_products"
                        android:textColor="@color/textColorDark"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/filterIcon"
                        style="@style/TextStyle.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/filter_icon"
                        android:textColor="@color/quantum_grey800"
                        android:textSize="20sp" />

                </LinearLayout>

                <GridView
                    android:id="@+id/gridViewProducts"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:horizontalSpacing="10dp"
                    android:nestedScrollingEnabled="true"
                    android:numColumns="2"
                    android:scrollbars="none"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:clipToPadding="false"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:verticalSpacing="10dp"
                    tools:listitem="@layout/shopping_product_item" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</layout>
